test/e2e/testdata/httproute-mixed-protocol-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mixed-protocols
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /infra-backend-v1
    - backendRefs:
        - name: tls-backend-2
          port: 443
      matches:
        - path:
            type: PathPrefix
            value: /tls-backend-2
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
        - name: tls-backend-2
          port: 443
      matches:
        - path:
            type: PathPrefix
            value: /mixed-protocols
---
apiVersion: v1
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDQzCCAiugAwIBAgIBATANBgkqhkiG9w0BAQsFADBCMRMwEQYDVQQKEwpFbnZv
[...]
    S5EAolzVv0yB7wHCWCgfG/ckdOTUNnE=
    -----END CERTIFICATE-----
kind: ConfigMap
metadata:
  name: backend-tls-ca
  namespace: gateway-conformance-infra
---
# keep this v1alpha3 to verify EG worked for both v1alpha3 and v1
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: policy-btls
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: tls-backend-2
      sectionName: https
  validation:
    caCertificateRefs:
      - name: backend-tls-ca
        group: ""
        kind: ConfigMap
    hostname: example.com
